[package]
name = "swarm-keep"
version = "0.1.0"
edition = "2021"
description = "keep — an encrypted secrets/notes vault synced over Swarm. Client-side ChaCha20-Poly1305; built on the scout library."
license = "MIT"
repository = "https://github.com/ethswarm-tools/keep"
readme = "README.md"
keywords = ["swarm", "ethswarm", "bee", "secrets", "cli"]
categories = ["command-line-utilities", "cryptography"]

# Published as `swarm-keep` (plain `keep` is taken on crates.io); the
# binary is `keep`.
[[bin]]
name = "keep"
path = "src/main.rs"

[dependencies]
swarm-scout = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chacha20poly1305 = "0.10"
sha2 = "0.10"
getrandom = "0.2"
